login and hero section css overflowing problem fixed

--- a/src/containers/LandingSection/LandingSection.css
+++ b/src/containers/LandingSection/LandingSection.css
@@ -1,5 +1,5 @@
 .landingSection {
-  height: 470px;
+  height: 100vh;
   width: 100%;
   border-bottom: 8px solid #222;
 }
